--- a/src/Home/Menu.css
+++ b/src/Home/Menu.css
@@ -8,6 +8,12 @@
   color: black;
 }
 
+#menuTitle {
+  font-size: 27px;
+  display: inline;
+  margin-right: 20px;
+}
+
 #menuItem a {
   color: black;
 }
