jump to review bar

--- a/src/Home/Menu.css
+++ b/src/Home/Menu.css
@@ -8,6 +8,14 @@
   color: black;
 }
 
+#menuItemRight {
+  float: right;
+  display: inline;
+  margin-right: 1%;
+  color: black;
+
+}
+
 #menuTitle {
   font-size: 27px;
   display: inline;
